Source/WebCore/platform/audio/MediaSession.h
@@ -45,15 +45,16 @@ public:
         Audio,
         WebAudio,
     };
-    
-    MediaType mediaType() const { return m_type; }
+    MediaType mediaType() const;
 
     enum State {
-        Running,
+        Idle,
+        Playing,
+        Paused,
         Interrupted,
     };
     State state() const { return m_state; }
-    void setState(State state) { m_state = state; }
+    void setState(State);
 
     enum EndInterruptionFlags {
         NoFlags = 0,
@@ -62,6 +63,12 @@ public:
     void beginInterruption();
     void endInterruption(EndInterruptionFlags);
 
+    void applicationWillEnterForeground() const;
+    void applicationWillEnterBackground() const;
+
+    bool clientWillBeginPlayback();
+    bool clientWillPausePlayback();
+
     void pauseSession();
 
 protected:
@@ -69,8 +76,9 @@ protected:
 
 private:
     MediaSessionClient& m_client;
-    MediaType m_type;
     State m_state;
+    State m_stateToRestore;
+    bool m_notifyingClient;
 };
 
 class MediaSessionClient {
@@ -79,10 +87,7 @@ public:
     MediaSessionClient() { }
     
     virtual MediaSession::MediaType mediaType() const = 0;
-    
-    virtual void beginInterruption() { }
-    virtual void endInterruption(MediaSession::EndInterruptionFlags) { }
-
+    virtual void resumePlayback() = 0;
     virtual void pausePlayback() = 0;
 
 protected:
